--- a/ArtStation_Dashboard/Views/Banner/_BannerTablePartial.cshtml
+++ b/ArtStation_Dashboard/Views/Banner/_BannerTablePartial.cshtml
@@ -25,6 +25,10 @@
         max-width: 60px;
         height: auto;
     }
+
+    .clickable-row:hover {
+        background-color: #f5f5f5;
+    }
 </style>
 <div class="table-responsive ">
     <table class="table align-items-center mb-0 w-100">
@@ -46,7 +50,7 @@
             {
                 @foreach (var item in Model.Items)
                 {
-                    <tr style="cursor:pointer;"
+                    <tr style="cursor:pointer; " class="clickable-row"
                         onclick="window.location='@Url.Action("Details", "Banner", new { id = item.Id })'">
                         <td>
 
