--- a/ArtStation_Dashboard/Views/Banner/Index.cshtml
+++ b/ArtStation_Dashboard/Views/Banner/Index.cshtml
@@ -63,6 +63,19 @@
         </div>
     </div>
 </div>
+@if (Model.TotalPages > 1)
+{
+    <nav aria-label="Page navigation" class="mt-3">
+        <ul class="pagination pagination-sm justify-content-center">
+            @for (int i = 1; i <= Model.TotalPages; i++)
+            {
+                <li class="page-item @(i == Model.PageNumber ? "active" : "")">
+                    <a class="page-link ajax-page" href="#" data-page="@i">@i</a>
+                </li>
+            }
+        </ul>
+    </nav>
+}
 
 
 
