--- a/ArtStation_Dashboard/Views/Order/CompanyOrder.cshtml
+++ b/ArtStation_Dashboard/Views/Order/CompanyOrder.cshtml
@@ -9,14 +9,14 @@
     var lang = culture.Name;
 }
 
-<form method="get" action="@Url.Action("CompanyOrder", "YourControllerName")" class="d-flex justify-content-center my-3">
-    <label class="form-label me-2">@(("بحث", "Search").Localize(lang))</label>
-    <div class="input-group input-group-outline my-3 w-50">
-        <input type="number" name="search" value="@ViewBag.Search" placeholder="@(("  ابحث رقم الطلب ", "Search With Order Number").Localize(lang))" class="form-control w-auto mx-1" />
-        <input type="hidden" name="statusFilter" value="@ViewBag.StatusFilter" />
-        <input type="hidden" name="pageSize" value="@Model.PageSize" />
-    </div>
-</form>
+@* <form method="get" action="@Url.Action("CompanyOrder", "YourControllerName")" class="d-flex justify-content-center my-3"> *@
+@*     <label class="form-label me-2">@(("بحث", "Search").Localize(lang))</label> *@
+@*     <div class="input-group input-group-outline my-3 w-50"> *@
+@*         <input type="number" name="search" value="@ViewBag.Search" placeholder="@(("  ابحث رقم الطلب ", "Search With Order Number").Localize(lang))" class="form-control w-auto mx-1" /> *@
+@*         <input type="hidden" name="statusFilter" value="@ViewBag.StatusFilter" /> *@
+@*         <input type="hidden" name="pageSize" value="@Model.PageSize" /> *@
+@*     </div> *@
+@* </form> *@
 
 <div class="container-fluid py-4">
     <div class="row">
