--- a/ArtStation_Dashboard/Views/Trader/AddTrader.cshtml
+++ b/ArtStation_Dashboard/Views/Trader/AddTrader.cshtml
@@ -11,99 +11,120 @@
 <section>
     <div class="page-header ">
         <div class="container">
-            <div class="row">
-              
-                <div class="col-xl-9 col-lg-6 col-md-8 d-flex flex-column m-auto ">
+            <div class="row ">
+
+                <div class="col-xl-9 col-lg-6 col-md-8 d-flex flex-column m-auto bg-white p-5">
                     <div class="card card-plain">
                         <div class="card-header">
-                            <h4 class="font-weight-bolder">@(("اضف حساب جديد لشركه", "Add New Company Account").Localize(lang)) </h4>
-                            <p class="mb-0"></p>
+                            <h4 class="font-weight-bolder">@(("اضف حساب جديد لشركه", "Add New Company Account").Localize(lang))</h4>
                         </div>
 
-
                         <div class="card-body">
-                            <div asp-validation-summary="All" class="text-danger"></div>
-                            <form role="form" asp-action="AddTrader" method="post" enctype="multipart/form-data">
-                                <div class="input-group input-group-outline mb-3">
-                                    <label asp-for="UserName" class="form-label">@(("اسم المستخدم", "User Name").Localize(lang))</label>
-                                    <input asp-for="UserName" type="text" class="form-control">
-                                    <br />
-                                    <span asp-validation-for="UserName" class="text-danger"></span>
+                            <form asp-action="AddTrader" method="post" enctype="multipart/form-data">
+                   
+
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="input-group input-group-outline my-3">
+                                            <label class="form-label">@(("اسم المستخدم", "User Name").Localize(lang))</label>
+                                            <input asp-for="UserName" type="text" class="form-control">
+                                           
+                                        </div>
+                                        <span asp-validation-for="UserName" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="input-group input-group-outline my-3">
+                                            <label class="form-label">@(("اسم الشركة", "Company Name").Localize(lang))</label>
+                                            <input asp-for="DispalyName" type="text" class="form-control">
+                                         
+                                        </div>
+                                        <span asp-validation-for="DispalyName" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="input-group input-group-outline my-3">
+                                            <label class="form-label">@(("الايميل", "Email").Localize(lang))</label>
+                                            <input asp-for="Email" type="email" class="form-control">
+                                          
+                                        </div>
+                                        <span asp-validation-for="Email" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="input-group input-group-outline my-3">
+                                            <label class="form-label">@(("رقم الموبايل", "Phone Number").Localize(lang))</label>
+                                            <input asp-for="PhoneNumber" type="text" class="form-control">
+                                           
+                                        </div>
+                                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="input-group input-group-outline my-3">
+                                            <label class="form-label">@(("الجنسيه", "Nationality").Localize(lang))</label>
+                                            <input asp-for="Nationality" type="text" class="form-control">
+                                           
+                                        </div>
+                                        <span asp-validation-for="Nationality" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="input-group input-group-outline my-3">
+                                            <label class="control-label fs-7">@(("صوره الشركه", "Company Logo").Localize(lang))</label>
+                                            <div class="input-group">
+                                                <span class="input-group-text">
+                                                    <i class="fas fa-image"></i>
+                                                </span>
+                                                <input asp-for="PhotoFile" type="file" class="form-control form-control-lg" id="formFile" accept="image/*" />
+                                            </div>
+                                          
+                                        </div>
+                                        <span asp-validation-for="PhotoFile" class="text-danger mt-1"></span>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="input-group input-group-outline my-3">
+                                            <select asp-for="City" class="form-control" aria-label="Select City"
+                                                    asp-items="@(Model.Cities != null ? new SelectList(Model.Cities, "City", "City") : new SelectList(""))">
+                                                <option value="">@((lang == "en") ? "Select a City" : "اختر مدينة")</option>
+                                            </select>
+                                          
+                                        </div>
+                                        <span asp-validation-for="City" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="col-md-6 position-relative">
+                                        <div class="input-group input-group-outline my-3">
+                                            <label class="form-label">@(("كلمه السر ", "Password").Localize(lang))</label>
+                                            <input asp-for="Password" type="password" class="form-control" id="newPasswordInput" />
+                                            <span class="position-absolute start-0 top-50 translate-middle-y me-3" style="cursor: pointer;" id="toggleNewPassword">
+                                                <i class="fa fa-eye" id="eyeIconNew"></i>
+                                            </span>
+                                        </div>
+                                        <span asp-validation-for="Password" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="col-md-6 d-flex align-items-center">
+                                        <div class="form-check form-switch my-3">
+                                            <input asp-for="IsActive" class="form-check-input" type="checkbox" id="isActiveSwitch">
+                                            <label class="form-check-label" for="isActiveSwitch">@(("نشط", "Active").Localize(lang))</label>
+                                        </div>
+                                        <span asp-validation-for="IsActive" class="text-danger"></span>
+                                    </div>
                                 </div>
-                                <div class="input-group input-group-outline mb-3">
-                                    <label asp-for="DispalyName" class="form-label"> @(("اسم الشركة", "Company Name").Localize(lang))</label>
-                                    <input asp-for="DispalyName" type="text" class="form-control">
-                                    <br />
-                                    <span asp-validation-for="DispalyName" class="text-danger"></span>
-                                </div> 
-                                <div class="input-group input-group-outline mb-3">
-                                    <label asp-for="Email" class="form-label">@(("الايميل", "Email").Localize(lang))</label>
-                                    <input asp-for="Email"  class="form-control">
-                                    <span asp-validation-for="Email" class="text-danger"></span>
-                                </div>
-                                <div class="input-group input-group-outline mb-3">
-                                    <label asp-for="PhoneNumber" class="form-label">@(("رقم الموبايل", "Phone Number").Localize(lang)) </label>
-                                    <input asp-for="PhoneNumber" type="text" class="form-control">
-                                    <br />
-                                    
-                                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                                </div>
-                                <div class="input-group input-group-outline mb-3">
-                                    <label class="form-label">@(("الجنسيه", "Nationality").Localize(lang))</label>
-                                    <input asp-for="Nationality" type="text" class="form-control">
-                                    <span asp-validation-for="Nationality" class="text-danger"></span>
-                                </div>
-                               
-                                
-                                <div class="form-group form-control input-group input-group-outline mb-3">
-                                    <label class="form-label ">@(("صوره الشركه", "Company Logo").Localize(lang))</label>
-                                    <input asp-for="PhotoFile" class="form-control " type="file" id="formFile" />
-                                    <span asp-validation-for="PhotoFile" class="text-danger"></span>
-                                </div>
-                                <div class="input-group input-group-outline mb-3"> 
-                                <select asp-for="City" class="input-group input-group-outline mb-3 " aria-label="Large select example"
-                                        asp-items="@(Model.Cities != null ?new SelectList(Model.Cities,"City","City"): new SelectList(""))">
-                                    <option value=" ">Select a City</option>
 
-                                </select>
-                               </div> 
-
-                                @* <div class="input-group input-group-outline mb-3 position-relative"> *@
-                                @*     <label class="form-label">@(("كلمه السر", "Password").Localize(lang))</label> *@
-                                @*     <input asp-for="Password" type="password" class="form-control" id="passwordInput"> *@
-                                @*     <span class="position-absolute end-0 top-50 translate-middle-y me-3" *@
-                                @*           style="cursor: pointer;" id="togglePassword"> *@
-                                @*         <i class="fa fa-eye" id="eyeIcon"></i> *@
-                                @*     </span> *@
-                                @* </div> *@
-                                @* <span asp-validation-for="Password" class="text-danger"></span> *@
-
-                                <div class="input-group input-group-outline mb-3 position-relative">
-                                    <label class="form-label">@(("كلمه السر ", " Password").Localize(lang))</label>
-                                    <input asp-for="Password" type="password" class="form-control" id="newPasswordInput" />
-                                    <span class="position-absolute start-0 top-50 translate-middle-y me-3" style="cursor: pointer;" id="toggleNewPassword">
-                                        <i class="fa fa-eye" id="eyeIconNew"></i>
-                                    </span>
-                                </div>
-                                <span asp-validation-for="Password" class="text-danger"></span>
-
-
-                                <div class="form-check form-switch mb-3">
-                                    <input asp-for="IsActive" class="form-check-input" type="checkbox" id="isActiveSwitch">
-                                    <label class="form-check-label" for="isActiveSwitch">@(("نشط", "Active").Localize(lang))</label>
-                                </div>
-                                <span asp-validation-for="IsActive" class="text-danger"></span>
-
-
-
-                                <div class="text-center">
-                                    <button type="submit" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">@(("اضف حساب جديد", "Add New Account").Localize(lang))</button>
+                                <div class="form-group mt-4">
+                                    <input type="submit" value="@(("اضف حساب جديد","Add New Account").Localize(lang))" class="btn btn-primary" />
+                                    <a asp-action="Index" class="btn btn-light ms-2">
+                                        @(lang == "en" ? "Back to List" : "العودة إلى القائمة")
+                                    </a>
                                 </div>
                             </form>
                         </div>
-                       
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
