--- a/ArtStation_Dashboard/Views/User/Index.cshtml
+++ b/ArtStation_Dashboard/Views/User/Index.cshtml
@@ -21,14 +21,24 @@
     </div>
 }
 
-<div class="d-flex justify-content-center my-3">
-    <label class="form-label">  @(("بحث", "Search").Localize(lang))</label>
-    <div class="input-group input-group-outline my-3 w-50">
+@* <div class="d-flex justify-content-center my-3"> *@
+@*     <label class="form-label">  @(("بحث", "Search").Localize(lang))</label> *@
+@*     <div class="input-group input-group-outline my-3 w-50"> *@
 
-        <input type="text" id="searchInput" value="@ViewBag.Search" placeholder="@(("  ابحث بالاسم أو رقم الموبايل ", "Search With Name ,Phone Number").Localize(lang)) " class="form-control w-auto mx-1" />
+@*         <input type="text" id="searchInput" value="@ViewBag.Search" placeholder="@(("  ابحث بالاسم أو رقم الموبايل ", "Search With Name ,Phone Number").Localize(lang)) " class="form-control w-auto mx-1" /> *@
+@*     </div> *@
+@* </div> *@
+
+<div class="d-flex justify-content-center my-3">
+    <div class="col-md-4">
+        <div class="input-group">
+            <input type="text"
+                   style="border-radius:8px ; padding-left: 10px;"
+                   class="form-control  bg-white text-secondary"
+                   id="searchInput" value="@ViewBag.Search" placeholder="@(("  ابحث بالاسم أو رقم الموبايل ", "Search With Name ,Phone Number").Localize(lang)) " />
+        </div>
     </div>
 </div>
-
 <div class="d-flex justify-content-center my-3">
     <a href="#" class="btn btn-outline-primary mx-1 ajax-filter @(ViewBag.StatusFilter == null ? "active" : "")"
        data-status="">
@@ -72,17 +82,17 @@
     </div>
 </div>
 
-<nav aria-label="Page navigation">
-    <ul class="pagination pagination-primary pagination-sm justify-content-center">
-        @for (int i = 1; i <= ViewBag.TotalPages; i++)
+<nav>
+    <ul class="pagination justify-content-center">
+        @for (int i = 1; i <= Model.TotalPages; i++)
         {
-            var isActive = (i == ViewBag.CurrentPage) ? "active" : "";
-            <li class="page-item @isActive">
-                <a class="page-link" href="?page=@i">@i</a>
+            <li class="page-item @(i == Model.PageNumber ? "active" : "")">
+                <a class="page-link ajax-page" href="#" data-page="@i">@i</a>
             </li>
         }
     </ul>
 </nav>
+
 
 @section Scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
